@@ -105,6 +105,35 @@ tornado.points <-
        geom_bar(aes(year, count, clickSelects=year, showSelected=state),
                 data=UStornadoCounts, stat="identity", position="identity"))
 gg2animint(tornado.points, "tornado-points")
+
+tornado.points.anim <-
+  list(map=ggplot()+
+       make_text(UStornadoes, -100, 50, "year",
+                 "Tornado paths and endpoints in %d")+
+       geom_segment(aes(x=startLong, y=startLat, xend=endLong, yend=endLat,
+                        showSelected=year),
+                    colour=seg.color, data=UStornadoes)+
+       geom_point(aes(endLong, endLat, showSelected=year),
+                    colour=seg.color,
+                  data=UStornadoes)+
+       geom_polygon(aes(x=long, y=lat, group=group, clickSelects=state),
+                    data=USpolygons, fill="grey", colour="black", alpha=3/4)+
+       theme(axis.line=element_blank(), axis.text=element_blank(), 
+             axis.ticks=element_blank(), axis.title=element_blank()),
+       width=list(map=750, ts=300),
+       height=list(map=500, ts=400),
+       ##time=list(variable="year", ms=2000),
+       ts=ggplot()+
+       xlab("year")+
+       ylab("Number of tornadoes")+
+       geom_bar(aes(year, count, clickSelects=year, showSelected=state),
+                data=UStornadoCounts, stat="identity", position="identity")+
+       make_text(UStornadoes, 1980, 200, "state")+
+       geom_text(aes(year, count + 5, label=count,
+                     showSelected2=year, showSelected=state),
+                data=UStornadoCounts, size=20))
+gg2animint(tornado.points.anim, "tornado-points-anim")
+
 ## OK: interactive version with lines instead of bars!
 tornado.ts.line <-
   list(map=ggplot()+
